# EnTT-Pacman

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.py  main.i  note.txt  sprites.json  update-sheet.sh  update_sheet  update_simpleton
animations/: dot.animera  ghost.animera  maze.animera  pacman.animera  scared.animera
assets/anim/: dots.anim  ghosts.anim  maze.anim  pacman.anim  winlose.anim
assets/sheet/: sprites.atlas
cmake/Modules/: FindPDCurses.cmake
conan/: build.py
include/Simpleton/Application/: app.hpp  sdl app.hpp
include/Simpleton/Box2D/: collision categories.hpp  collision pairs.hpp  collision pairs.inl  contact listener.hpp  contact listener.inl  entity id.hpp  json.hpp  limit velocity.hpp  nanovg debug draw.inl  object types.hpp  parse json.hpp  parse json.inl
include/Simpleton/Camera 2D/: camera.hpp  camera.inl  rotate.hpp  rotate.inl  transform.hpp  zoom to fit.hpp
include/Simpleton/Data/: json.hpp
include/Simpleton/ECS/: comp init.hpp  comp inits.hpp  entity id map.hpp  entity id map.inl  json.hpp  json.inl  level manager.inl  level.hpp  load prototype.hpp  load prototype.inl  progress manager.inl  prototype.hpp
include/Simpleton/Event/: event.hpp  manager.hpp  manager.inl
include/Simpleton/Graphics 2D/: blit surface.inl  depth.hpp  depth.inl  filter surface.hpp  filter surface.inl  geom types.hpp  load surface.hpp  load surface.inl  quad writer lite.hpp  quad writer lite.inl  quad writer.hpp  quad writer.inl  render types.hpp  renderer.hpp  renderer.inl  sequence.hpp  shaders.hpp  sheet tex.inl  stb_image_write.h  surface.hpp  surface.inl  text.hpp  text.inl  types.hpp  write surface.hpp  write surface.inl  zsort.inl
include/Simpleton/Grid/: a star.hpp  a star.inl  blit.hpp  blit.inl  dir pair.hpp  dir.hpp  distance.hpp  grid.hpp  morton.hpp  one path.hpp  one path.inl  pos.hpp
include/Simpleton/ID/: local.hpp  type.hpp
include/Simpleton/Math/: clamp.hpp  constants.hpp  int float.hpp  interpolate.hpp  point in polygon.hpp  pow.hpp  rand.hpp  rect.hpp  round.hpp  siconstants.hpp
include/Simpleton/Memory/: alloc.hpp  block allocator.hpp  buffer.hpp  buffer.inl  file io.hpp  file io.inl  view.hpp
include/Simpleton/OpenGL/: attrib pointer.hpp  buffer.inl  context.hpp  context.inl  framebuffer.hpp  framebuffer.inl  opengl.hpp  shader program.hpp  static char buffer.hpp  texture.hpp  texture.inl  type enum.hpp  vertex array.hpp
include/Simpleton/SDL/: audio library.hpp  audio library.inl  chunk.hpp  debug input.hpp  error.hpp  events.hpp  font library.hpp  font library.inl  library.hpp  library.inl  mainloop.hpp  mouse pos.hpp  mouse pos.inl  music.hpp  paths.hpp  paths.inl  quad writer.hpp  renderer.hpp  renderer.inl  surface.hpp  system cursors.hpp  system cursors.inl  texture.hpp  window.hpp  window.inl
include/Simpleton/Simpleton/Box2D/: collision pairs.hpp  glm.hpp
include/Simpleton/Simpleton/Camera 2D/: aabb.hpp  animate.hpp  constant scale.hpp  constant speed.hpp  matrix mul.hpp  props.hpp  target.hpp
include/Simpleton/Simpleton/ECS/: comp init.hpp  level manager.hpp  load prototype.inl  registry.hpp
include/Simpleton/Simpleton/Graphics 2D/: depth.inl  (+4 more)
include/Simpleton/Sprite/: anim.hpp  json.hpp  sdl.hpp  sheet.inl  types.hpp
include/Simpleton/Time/: anim.hpp  benchmark.hpp  fps.hpp  fps.inl  get.hpp  main loop.hpp  progress speed anim.hpp  synchronizer.hpp  timer.hpp
include/Simpleton/Type List/: foreach.hpp  get.hpp  index.hpp  pack.hpp  pred.hpp  reduce.hpp  splice.hpp  string.hpp  transform.hpp  type.hpp
include/Simpleton/Utils/: bool enable.hpp  compose string.hpp  compose string.inl  dispatcher.hpp  endian.hpp  function alias.hpp  generic raii.hpp  hash.hpp  instance limiter.hpp  member function.hpp  move test.hpp  null check.hpp  numeric iterators.hpp  op stack.hpp  parse string.hpp  parse string.inl  partial apply.hpp  profiler.inl  safe down cast.hpp  smart const ref.hpp  strong alias.hpp  tuple.hpp
pdcurses/: CMakeLists.txt  curspriv.h  initscr.c  panel.h  pdcurses.h  term.h
src/: actual dir component.hpp  application.cpp  application.hpp  blinky target component.hpp  blinky target system.cpp  blinky target system.hpp  blit sprites system.cpp  blit sprites system.hpp  chase target component.hpp  clear desired dir system.cpp  clear desired dir system.hpp  clyde target component.hpp  clyde target system.cpp  clyde target system.hpp  color.hpp  curses.hpp  desired dir component.hpp  dimensions.hpp  dir to vec.hpp  dot render system.cpp  dot render system.hpp  eat dots system.cpp  eat dots system.hpp  factories.cpp  factories.hpp  framebuf.cpp  framebuf.hpp  game.cpp  game.hpp  get camera system.cpp  get camera system.hpp  get player pos system.cpp  get player pos system.hpp  ghost mode component.hpp  ghost render system.cpp  ghost render system.hpp  ghost sprite component.hpp  graphics.cpp  graphics.hpp  home position component.hpp  (+51 more)
src/comp/: chase_target.hpp  dir.hpp  ghost.hpp  ghost_mode.hpp  home_position.hpp  house.hpp  player.hpp  position.hpp  sprite.hpp  target.hpp
src/core/: app.cpp  app.hpp  constants.hpp  dimensions.hpp  factories.cpp  factories.hpp  game.cpp  game.hpp  maze.cpp  maze.hpp
src/sys/: can_move.cpp  can_move.hpp  change_ghost_mode.cpp  change_ghost_mode.hpp  eat_dots.cpp  eat_dots.hpp  house.cpp  house.hpp  movement.cpp  movement.hpp  player_ghost_collide.cpp  player_ghost_collide.hpp  player_input.cpp  player_input.hpp  player_lose.cpp  player_lose.hpp  pursue_target.cpp  pursue_target.hpp  render.cpp  render.hpp  set_chase_target.cpp  set_chase_target.hpp  set_eaten_target.cpp  set_eaten_target.hpp  set_scared_target.cpp  set_scared_target.hpp  set_scatter_target.cpp  set_scatter_target.hpp  set_target.cpp  set_target.hpp
src/util/: dir.hpp  dir2vec.hpp  dir_to_pos.hpp  frame_cap.hpp  grid.hpp  int_range.hpp  pos.hpp  registry.hpp  sdl_check.hpp  sdl_delete.hpp  sdl_load_texture.cpp  sdl_load_texture.hpp  sdl_quad_writer.cpp  sdl_quad_writer.hpp  sprite_id.hpp  sprite_sheet.cpp  sprite_sheet.hpp  sprites.cpp  sprites.hpp
(+39 files in other folders)
