cmake_minimum_required(VERSION 3.2)

add_library(PDcurses
        addch.c
        addchstr.c
        addstr.c
        attr.c
        beep.c
        bkgd.c
        border.c
        clear.c
        color.c
        curspriv.h
        debug.c
        delch.c
        deleteln.c
        deprec.c
        getch.c
        getstr.c
        getyx.c
        inch.c
        inchstr.c
        initscr.c
        inopts.c
        insch.c
        insstr.c
        instr.c
        kernel.c
        keyname.c
        mouse.c
        move.c
        outopts.c
        overlay.c
        pad.c
        panel.c
        panel.h
        pdcclip.c
        pdcdisp.c
        pdcgetsc.c
        pdckbd.c
        pdcscrn.c
        pdcsetsc.c
        pdcurses.h
        pdcutil.c
        pdcwin.h
        printw.c
        refresh.c
        scanw.c
        scr_dump.c
        scroll.c
        slk.c
        term.h
        termattr.c
        terminfo.c
        touch.c
        util.c
        window.c
)

target_include_directories(PDcurses
        PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)